# ATOS

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS  FUNDING.yml
atos/: __init__.py  __main__.py  loggers.py
atos/core/: bot.py  commands.py
atos/core/types/: slash.py
atos/models/tournament/: admin.py  apps.py  models.py
atos/models/tournament/migrations/: 0001_initial.py
