[metadata]
name = ATOSbot
version = attr: atos.__version__
license = GPL-3.0
author = El Laggron
author_email = laggron42@gmail.com
description = The ATOS Discord bot
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/retke/ATOS
project_urls =
    Discord server = https://discord.gg/DC6zCsZ
    Patreon = https://www.patreon.com/retke
    Issue Tracker = https://github.com/retke/ATOS/issues
    Source Code = https://github.com/retke/ATOS
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Framework :: AsyncIO
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Communications :: Chat
    Topic :: Games/Entertainment

[options]
package_dir =
    = atos
packages = find:
python_requires = >=3.9
install_requires =
    aiohttp==3.7.4.post0
    async-timeout==3.0.1
    attrs==21.2.0
    chardet==4.0.0
    click==8.0.1
    colorama==0.4.4
    discord.py==1.7.3
    idna==3.2
    mccabe==0.6.1
    multidict==5.1.0
    mypy-extensions==0.4.3
    pathspec==0.9.0
    platformdirs==2.3.0
    pycodestyle==2.7.0
    pyflakes==2.3.1
    regex==2021.8.28
    tomli==1.2.1
    typing-extensions==3.10.0.2
    yarl==1.6.3

[options.packages.find]
where = atos